# Slms_profiling

./: .gitignore  progress.md
android-ml-benchmark/: .gitignore  README.md  adb_interface.py  android_aarch64_benchmark_model.apk  benchmark.py  device_info.py  download_models.py  phase_report.py  profile_llm.py  report.py  requirements.txt  run_tf_apk_benchmark.py  system_profiler.py
android-ml-benchmark/backends/: __init__.py  base.py  llamacpp_binary.py  llamacpp_phase_profiler.py  onnx_binary.py  pytorch_binary.py  tflite_apk.py
android-ml-benchmark/binaries/: .gitkeep
android-ml-benchmark/models/: .gitkeep
android-ml-benchmark/prompts/: fixed_128.txt
profiler/: CMakeLists.txt  README.md  build_android.ps1  build_android.sh
profiler/src/: llama_phase_profiler.cpp
